--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="zh-CN" data-theme="dark"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>页面没有找到 | 瀚可</title><meta name="keywords" content="生活，学术，娱乐，摄影，代码"><meta name="author" content="Hank Zhang,1181282174@qq.com"><meta name="copyright" content="Hank Zhang"><meta name="format-detection" content="telephone=no"><meta name="theme-color" content="#0d0d0d"><meta name="description" content="Hank 的博客">
 <meta property="og:type" content="website">
 <meta property="og:title" content="瀚可">
-<meta property="og:url" content="https://hankzhangcn.gitee.io/404.html">
+<meta property="og:url" content="https://hankzhang.cn/404.html">
 <meta property="og:site_name" content="瀚可">
 <meta property="og:description" content="Hank 的博客">
 <meta property="og:locale" content="zh_CN">
@@ -9,7 +9,7 @@
 <meta property="article:author" content="Hank Zhang">
 <meta property="article:tag" content="生活，学术，娱乐，摄影，代码">
 <meta name="twitter:card" content="summary">
-<meta name="twitter:image" content="https://cdn.jsdelivr.net/gh/hankzhangcn/CDN@master/img/头像_白.6bx7uvr31us0.jpg"><link rel="shortcut icon" href="/img/favicon.png"><link rel="canonical" href="https://hankzhangcn.gitee.io/404"><link rel="preconnect" href="//cdn.jsdelivr.net"/><link rel="preconnect" href="//hm.baidu.com"/><link rel="preconnect" href="//s4.cnzz.com"/><link rel="preconnect" href="//busuanzi.ibruce.info"/><meta name="baidu-site-verification" content="32e7ff004848defd9b3da5f3e666223a"/><link rel="stylesheet" href="/css/index.css"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css" media="print" onload="this.media='all'"><script>var _hmt = _hmt || [];
+<meta name="twitter:image" content="https://cdn.jsdelivr.net/gh/hankzhangcn/CDN@master/img/头像_白.6bx7uvr31us0.jpg"><link rel="shortcut icon" href="/img/favicon.png"><link rel="canonical" href="https://hankzhang.cn/404"><link rel="preconnect" href="//cdn.jsdelivr.net"/><link rel="preconnect" href="//hm.baidu.com"/><link rel="preconnect" href="//s4.cnzz.com"/><link rel="preconnect" href="//busuanzi.ibruce.info"/><meta name="baidu-site-verification" content="32e7ff004848defd9b3da5f3e666223a"/><link rel="stylesheet" href="/css/index.css"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css" media="print" onload="this.media='all'"><script>var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
   hm.src = "https://hm.baidu.com/hm.js?32e7ff004848defd9b3da5f3e666223a";
@@ -62,7 +62,7 @@
   isHome: false,
   isHighlightShrink: false,
   isToc: false,
-  postUpdate: '2021-04-09 16:26:51'
+  postUpdate: '2021-04-09 16:56:23'
 }</script><noscript><style type="text/css">
   #nav {
     opacity: 1
