--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
   algolia: undefined,
   localSearch: {"path":"search.xml","languages":{"hits_empty":"找不到您查询的内容：${query}"}},
   translate: undefined,
-  noticeOutdate: {"limitDay":100,"position":"top","messagePrev":"距离此文上次更新已经有","messageNext":"天了，有些信息可能已经不适用，请留意。如果您发现此文有任何错误，请在评论区留言。"},
+  noticeOutdate: undefined,
   highlight: {"plugin":"highlighjs","highlightCopy":true,"highlightLang":true,"highlightHeightLimit":false},
   copy: {
     success: '复制成功',
@@ -62,7 +62,7 @@
   isHome: false,
   isHighlightShrink: false,
   isToc: false,
-  postUpdate: '2021-04-30 22:38:51'
+  postUpdate: '2021-05-02 12:22:24'
 }</script><noscript><style type="text/css">
   #nav {
     opacity: 1
