--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
-<!DOCTYPE html><html lang="zh-CN" data-theme="light"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>瀚可的小站 - 「Hank」就是「瀚可」</title><meta name="author" content="瀚可"><meta name="copyright" content="瀚可"><meta name="format-detection" content="telephone=no"><meta name="theme-color" content="#ffffff"><meta property="og:type" content="website">
+<!DOCTYPE html>
+<html lang="zh">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>瀚可的小站·暂停访问</title>
+</head>
+  <h1>瀚可的小站正在维护·暂停访问</h1>
+  <a>由于「jsdelivr」由于在大陆地区的服务迁出，导致解析缓慢，瀚可的小站于即日起进入维护状态。</a><br><a>目前正在进行静态资源迁移工作，预计于2022年1月5日恢复访问。</a>
+</body>
+</html>
+<!-- <!DOCTYPE html><html lang="zh-CN" data-theme="light"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>瀚可的小站 - 「Hank」就是「瀚可」</title><meta name="author" content="瀚可"><meta name="copyright" content="瀚可"><meta name="format-detection" content="telephone=no"><meta name="theme-color" content="#ffffff"><meta property="og:type" content="website">
 <meta property="og:title" content="瀚可的小站">
 <meta property="og:url" content="http://hankzhang.cn/index.html">
 <meta property="og:site_name" content="瀚可的小站">
@@ -156,4 +168,4 @@ function panguInit () {
   }
 }
 
-document.addEventListener('DOMContentLoaded', panguInit)</script><div class="js-pjax"></div><script async data-pjax src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script></div></body></html>
+document.addEventListener('DOMContentLoaded', panguInit)</script><div class="js-pjax"></div><script async data-pjax src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script></div></body></html> -->
